--- a/src/page/cover/index.less
+++ b/src/page/cover/index.less
@@ -7,7 +7,7 @@
 .btn_buttom {
   position: fixed;
   width: 100%;
-  bottom: 0;
+  bottom: 1.25rem;
   text-align: center;
   span {
     text-align: center;
