--- a/src/page/cover/index.less
+++ b/src/page/cover/index.less
@@ -1,19 +1,106 @@
-.desc {
-  width: 20px;
-  margin: 0 auto;
-  line-height: 24px;
-  font-size: 20px;
+.position_size(@width, @height, @back, @position1, @value1, @position2, @value2) {
+  position: absolute;
+  width: @width;
+  height: @height;
+  @{position1}: @value1;
+  @{position2}: @value2;
+  background: url("../../assets/cover/@{back}.png") no-repeat;
+  background-size: contain;
 }
-.btn_buttom {
-  position: fixed;
-  width: 100%;
-  bottom: 1.25rem;
-  text-align: center;
-  span {
-    text-align: center;
+/* 星球动画 */
+/* 统一处理 */
+.coll(@firstTop, @secondTop, @name) {
+  .keyframes(all, @name, {0% {transform: translateY(@firstTop) ;} 50% {transform: translateY(@secondTop) ;} 100% {transform: translateY(@firstTop) ;}});
+  animation: @name 2s linear infinite;
+  -webkit-animation: @name 2s linear infinite;
+}
+/* 各浏览器 */
+.keyframes (@prefix,@name,@content) when (@prefix=def) {
+  @keyframes @name {
+    @content();
   }
 }
-/* .btn_buttom span {
-  text-align: center;
+.keyframes (@prefix,@name,@content) when (@prefix=webkit) {
+  @-webkit-keyframes @name {
+    @content();
+  }
 }
- */
+.keyframes (@prefix,@name,@content) when (@prefix=all) {
+  .keyframes(webkit, @name, @content);
+  .keyframes(def, @name, @content);
+}
+
+/* 光动画 */
+.coll_light(@firstOp, @secondOp, @name) {
+  .keyframes(all, @name, {0% {opacity: @firstOp;} 50% {opacity: @secondOp ;} 100% {opacity: @firstOp ;}});
+  animation: @name 3s linear infinite;
+  -webkit-animation: @name 3s linear infinite;
+}
+.keyframes_light (@name,@content) {
+  @keyframes @name {
+    @content();
+  }
+}
+/* 按钮 */
+@keyframes btn {
+  0% {
+    transform: translateZ(0rem);
+  }
+  50% {
+    transform: translateZ(0.05rem);
+  }
+  100% {
+    transform: translateZ(0rem);
+  }
+}
+.cover_content {
+  /* top: 88px;
+  height: calc(~"100% - 88px"); */
+  height: 100%;
+  position: relative;
+  width: 100%;
+  background: url("../../assets/cover/background.png") no-repeat;
+  background-size: 100%;
+  background-position: 0 0;
+  .title {
+    .position_size(1rem, 3.12rem, title, top, 1.03rem, left, 1.36rem);
+  }
+  .earth1 {
+    .position_size(0.63rem, 0.41rem, left_top, top, 0, left, 0.76rem);
+  }
+  .earth2 {
+    .position_size(0.8rem, 1.16rem, left, top, 1.82rem, left, 0);
+    .coll(0, 0.05rem, move5);
+  }
+  .earth3 {
+    .position_size(0.35rem, 0.45rem, right_top, top, 0.61rem, right, 0.58rem);
+    .coll(0rem, 0.07rem, move7);
+  }
+  .earth4 {
+    .position_size(1.06rem, 1.57rem, right, top, 2.73rem, right, 0rem);
+    .coll(0rem, -0.06rem, move6);
+  }
+  .book_left {
+    .position_size(1.3rem, 2.74rem, book_left, bottom, 0.63rem, left, 0rem);
+  }
+  .book_right {
+    .position_size(1.59rem, 2.38rem, book_right, bottom, 0.21rem, left, 1.12rem);
+  }
+  .light1 {
+    .position_size(3.75rem, 3.02rem, light1, bottom, 0, left, 0);
+    .coll_light(100, 0, light1);
+  }
+  .light2 {
+    .position_size(3.75rem, 2.21rem, light2, bottom, 0, left, 0);
+    .coll_light(0, 100, light2);
+  }
+
+  .btn_buttom {
+    .position_size(3.75rem, 2.07rem, bottom, bottom, 0, left, 0);
+    perspective: 1rem;
+    .btn {
+      .position_size(0.8rem, 0.27rem, button, bottom, 0.26rem, left, 1.48rem);
+      animation: btn 2s linear infinite;
+    }
+  }
+}
